<resources>
    <string name="app_name">Tema1Final</string>
    <string name="questions">Questions</string>
    <string name="question">Question \</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="YourScoreis">Your Score is \n</string>
    <string name="outof10"> \ out of 10</string>
    <string name="out10">/10</string>
    <string name="hello">Hello</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="score">Score:</string>
    <string name="exit">Exit</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="exit_to_menu2">Exit to Menu</string>
    <string name="zece">/10</string>
    <string name="spatiu"> \ </string>
    <string name="q1">Where is Berghain Club located?</string>
    <string name="q2">Who holds the record for longest non-stop solo performance at Sunwaves Festival?</string>
    <string name="q3">Which of the following clubs is located outside of Berlin?</string>
    <string name="q4">How many Sunwaves editions have been so far?</string>
    <string name="q5">Which club does Panorama Bar belong to?</string>
    <string name="q6">Which of the following DJs is Romanian?</string>
    <string name="q7">Which of the following clubs is located in Tokyo?</string>
    <string name="q8">When did the first edition of Sonar take place in Barcelona?</string>
    <string name="q9">When did the first edition of Love Parade take place in Berlin?</string>
    <string name="q10">Which of the following cities from the US is the most remarkable for techno culture and history?</string>
    <string name="c1">East Berlin</string>
    <string name="c2">Joseph Capriati</string>
    <string name="c3">Arma17</string>
    <string name="c4">27</string>
    <string name="c5">Berghain</string>
    <string name="c6">Dubtil</string>
    <string name="c7">Contact</string>
    <string name="c8">1994</string>
    <string name="c9">1989</string>
    <string name="c10">Detroit</string>
    <string name="q1a1">West Berlin</string>
    <string name="q1a2">Frankfurt</string>
    <string name="q1a3">Munich</string>
    <string name="q1a4">East Berlin</string>
    <string name="q2a1">Joseph Capriati</string>
    <string name="q2a2">Dubfire</string>
    <string name="q2a3">Marco Carola</string>
    <string name="q2a4">Tini</string>
    <string name="q3a1">Club der Visionaere</string>
    <string name="q3a2">KitKat</string>
    <string name="q3a3">Arma17</string>
    <string name="q3a4">Hoppetosse</string>
    <string name="q4a1">25</string>
    <string name="q4a2">26</string>
    <string name="q4a3">27</string>
    <string name="q4a4">28</string>
    <string name="q5a1">Robert Johnson</string>
    <string name="q5a2">Berghain</string>
    <string name="q5a3">Shelter</string>
    <string name="q5a4">Fabric</string>
    <string name="q6a1">Dubtil</string>
    <string name="q6a2">Zip</string>
    <string name="q6a3">Ferro</string>
    <string name="q6a4">Alci</string>
    <string name="q7a1">Space</string>
    <string name="q7a2">Egg</string>
    <string name="q7a3">Eden</string>
    <string name="q7a4">Contact</string>
    <string name="q8a1">1990</string>
    <string name="q8a2">1994</string>
    <string name="q8a3">1997</string>
    <string name="q8a4">2002</string>
    <string name="q9a1">1985</string>
    <string name="q9a2">1989</string>
    <string name="q9a3">1999</string>
    <string name="q9a4">2000</string>
    <string name="q10a1">Chicago</string>
    <string name="q10a2">Miami</string>
    <string name="q10a3">Detroit</string>
    <string name="q10a4">New York</string>
</resources>