<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity"
    android:background="@drawable/gradient"
    android:id="@+id/smarandoiu_theodor_relativelayout">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questions"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:id="@+id/smarandoiu_theodor_textview"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/smarandoiu_theodor_question"
        android:layout_below="@+id/smarandoiu_theodor_textview"
        android:layout_marginTop="30dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:id="@+id/smarandoiu_theodor_linearlayout"
        android:layout_below="@id/smarandoiu_theodor_question"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_1"
            android:textAllCaps="false"
            android:id="@+id/smarandoiu_theodor_option1"

            android:background="@drawable/custom_button_options"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_2"
            android:textAllCaps="false"
            android:id="@+id/smarandoiu_theodor_option2"
            android:background="@drawable/custom_button_options"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:id="@+id/smarandoiu_theodor_option3"
            android:background="@drawable/custom_button_options"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_4"
            android:textAllCaps="false"
            android:id="@+id/smarandoiu_theodor_option4"
            android:background="@drawable/custom_button_options"/>
    </LinearLayout>

</RelativeLayout>