<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/smarandoiu_theodor_LLScore">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/score"
        android:layout_margin="10dp"
        android:padding="3dp"
        android:id="@+id/smarandoiu_theodor_textview"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/restart_quiz"
        android:textAllCaps="false"
        android:id="@+id/smarandoiu_theodor_restart"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/exit_to_menu2"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:id="@+id/smarandoiu_theodor_exit"
        />


</LinearLayout>